--- a/SVM/svm.ipynb
+++ b/SVM/svm.ipynb
@@ -113,13 +113,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 50882)\t0.056705967943850646\n",
+      "  (0, 41187)\t0.0629415412384319\n",
+      "  (0, 31809)\t0.08079027538328824\n",
+      "  (0, 21149)\t0.024890659532478102\n",
+      "  (0, 3398)\t0.0769239272141577\n",
+      "  (0, 5154)\t0.07418070953186352\n",
+      "  (0, 23280)\t0.02187005982734546\n",
+      "  (0, 4692)\t0.08079027538328824\n",
+      "  (0, 5137)\t0.07205290458928179\n",
+      "  (0, 4657)\t0.09220750579935863\n",
+      "  (0, 55112)\t0.030533606346474212\n",
+      "  (0, 276)\t0.07418070953186352\n",
+      "  (0, 55346)\t0.06884444400905192\n",
+      "  (0, 32703)\t0.0769239272141577\n",
+      "  (0, 39333)\t0.08079027538328824\n",
+      "  (0, 27771)\t0.0769239272141577\n",
+      "  (0, 36503)\t0.056705967943850646\n",
+      "  (0, 34446)\t0.0769239272141577\n",
+      "  (0, 35869)\t0.06884444400905192\n",
+      "  (0, 31614)\t0.04428192890030513\n",
+      "  (0, 39201)\t0.047742446126164684\n",
+      "  (0, 41141)\t0.024662813142472418\n",
+      "  (0, 55145)\t0.034981110551738366\n",
+      "  (0, 16233)\t0.025054834397773965\n",
+      "  (0, 46352)\t0.050485663808458835\n",
+      "  :\t:\n",
+      "  (3515, 26454)\t0.1936885573822247\n",
+      "  (3515, 16984)\t0.2209414736883532\n",
+      "  (3515, 3909)\t0.1753690672166642\n",
+      "  (3515, 24548)\t0.15091611192636076\n",
+      "  (3515, 47849)\t0.19348511586491815\n",
+      "  (3515, 41539)\t0.21703517013586096\n",
+      "  (3515, 18616)\t0.18504296442771034\n",
+      "  (3515, 55441)\t0.15769510061353165\n",
+      "  (3516, 41033)\t0.3924647376862402\n",
+      "  (3516, 536)\t0.3924647376862402\n",
+      "  (3516, 883)\t0.28138899185967087\n",
+      "  (3516, 44892)\t0.3057587730022593\n",
+      "  (3516, 12642)\t0.2881799849532204\n",
+      "  (3516, 5054)\t0.2612241081029587\n",
+      "  (3516, 45487)\t0.21770221165850467\n",
+      "  (3516, 14765)\t0.18351187402739413\n",
+      "  (3516, 20454)\t0.18079352606315505\n",
+      "  (3516, 56698)\t0.2277732509132936\n",
+      "  (3516, 2641)\t0.19340509278008827\n",
+      "  (3516, 60756)\t0.18532866311521223\n",
+      "  (3516, 38281)\t0.19216146952639968\n",
+      "  (3516, 55885)\t0.11797838440644494\n",
+      "  (3516, 46802)\t0.19155195831267996\n",
+      "  (3516, 16233)\t0.12171191350745869\n",
+      "  (3516, 39851)\t0.16807141256662894\n"
+     ]
+    }
+   ],
    "source": [
     "# Converting text data into numerical features using TF-IDF\n",
     "tfidf = TfidfVectorizer(stop_words='english')\n",
-    "X_tfidf = tfidf.fit_transform(X)"
+    "# print(tfidf)\n",
+    "X_tfidf = tfidf.fit_transform(X)\n",
+    "print(X_tfidf)"
    ]
   },
   {
@@ -282,25 +342,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def predict_spam(message):\n",
     "    message_tfidf = tfidf_vectorizer.transform([message])\n",
     "    prediction = svm_model.predict(message_tfidf)\n",
+    "    print(prediction)\n",
     "    return \"Spam\" if prediction[0] == 1.0 else \"Not Spam\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0.]\n",
       "The message is: Not Spam\n"
      ]
     }
@@ -308,7 +370,7 @@
    "source": [
     "# Test with a new message\n",
     "# Example texts\n",
-    "text_not_spam = \"Hey! How are you doing. Let's catch up soon!\"\n",
+    "text_not_spam = \"Hey! How are you doing. Let's catch up soon!555\"\n",
     "text_spam = \"Congratulations! You've been selected as a winner. Text WON to 44255 to claim your prize. \"\n",
     "\n",
     "result = predict_spam(text_not_spam)\n",
@@ -317,11 +379,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.]\n",
+      "The message is: Spam\n"
+     ]
+    }
+   ],
    "source": [
-    "result = predict_spam(text_not_spam)\n",
+    "result = predict_spam(text_spam)\n",
     "print(f\"The message is: {result}\")"
    ]
   }
