--- a/DNN/dnn.ipynb
+++ b/DNN/dnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
        "4  request book information earlier this morning ...    0.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,9 +269,10 @@
     }
    ],
    "source": [
-    "# Model training\n",
+    "# Split the data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(padded_sequences, data['label'], test_size=0.2, random_state=42)\n",
     "\n",
+    "# Model training\n",
     "history = model.fit(X_train, y_train, epochs=30, batch_size=16 ,validation_data=(X_test, y_test))"
    ]
   },
@@ -338,7 +339,6 @@
     "plt.xlabel('Epochs')\n",
     "plt.ylabel('Loss')\n",
     "plt.legend()\n",
-    "\n",
     "plt.show()"
    ]
   },
