--- a/DNN/dnn.ipynb
+++ b/DNN/dnn.ipynb
@@ -414,17 +414,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the model\n",
-    "model.save('model_dnn.h5')  # Saves to HDF5 file\n"
+    "model.save('model_dnn.h5')  # Saves to HDF5 file\n",
+    "\n",
+    "# Save the tokenizer\n",
+    "import pickle\n",
+    "\n",
+    "with open('tokenizer.pickle', 'wb') as handle:\n",
+    "    pickle.dump(tokenizer, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,23 +449,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/22 [==============================] - 0s 5ms/step - loss: 0.0758 - accuracy: 0.9830\n",
-      "Restored model accuracy: 98.30%\n",
-      "Data : [[ 241    4  390 ...    0    0    0]\n",
-      " [ 314   58    1 ...    0    0    0]\n",
-      " [  97  284    4 ...    0    0    0]\n",
-      " ...\n",
-      " [  29   11 1128 ...    0    0    0]\n",
-      " [ 145    1   23 ...    0    0    0]\n",
-      " [4411  582  607 ...    0    0    0]]\n",
-      "22/22 [==============================] - 0s 5ms/step\n"
+      "22/22 [==============================] - 0s 7ms/step - loss: 0.0955 - accuracy: 0.9858\n",
+      "Restored model accuracy: 98.58%\n",
+      "22/22 [==============================] - 0s 6ms/step\n"
      ]
     }
    ],
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,15 +480,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "Prediction: [[0.83604676]]\n",
+      "1/1 [==============================] - 0s 45ms/step\n",
+      "Prediction: [[0.6673779]]\n",
       "Is the message spam?: No\n"
      ]
     }
