Update class LPN, SVM and web api

--- a/LPN/lpn.ipynb
+++ b/LPN/lpn.ipynb
@@ -310,11 +310,11 @@
    ],
    "source": [
     "# Save the model\n",
-    "model_path = './lpn_model.joblib'\n",
+    "model_path = './model_lpn.joblib'\n",
     "joblib.dump(model, model_path)\n",
     "\n",
     "# Save the vectorizer\n",
-    "vectorizer_path = './vectorizer.joblib'\n",
+    "vectorizer_path = './vectorizer_lpn.joblib'\n",
     "joblib.dump(vectorizer, vectorizer_path)\n",
     "\n"
    ]
