--- a/SVM/svm.ipynb
+++ b/SVM/svm.ipynb
@@ -262,8 +262,8 @@
    ],
    "source": [
     "# Exporting the model and the TF-IDF vectorizer\n",
-    "model_path = './svm_model.joblib'\n",
-    "vectorizer_path = './tfidf_vectorizer.joblib'\n",
+    "model_path = './model_svm.joblib'\n",
+    "vectorizer_path = './tfidf_vectorizer_svm.joblib'\n",
     "\n",
     "joblib.dump(svm_model, model_path)\n",
     "joblib.dump(tfidf, vectorizer_path)"
